Fixes payment confirmation view spacing Refs #10390

--- a/assets/styles/_confirmation.css
+++ b/assets/styles/_confirmation.css
@@ -1,7 +1,4 @@
 .confirmation__wrapper {
-  width: 1140px;
-  max-width: 100%;
-  margin: 0 auto;
 }
 
 .confirmation__inner {
